src/ducks/account/AccountSwitch.styl
// TODO understand why this is necessary
// for the account switch to work on mobile
@require 'objects/*'

@require 'tools/mixins.styl'
@require 'settings/breakpoints'

.account-switch
    position relative
    padding-bottom 20px
    margin-bottom 20px
    border-bottom 1px solid silver

    a
    a:visited
        color            dodger-blue
        text-decoration  none

    a:hover
    a:active
        text-decoration  underline

.account-switch-button
    margin 10px 0
    width 100%
    padding 15px 10%
    border 0
    text-align left
    outline 0
    background  embedurl('../../assets/icons/icon-chevron-down.svg') 90% center no-repeat

    .account-name
        max-width 90%
        overflow hidden
        font-weight bold
        color charcoal-grey
        text-overflow ellipsis
        white-space nowrap

    .account-num
        margin-top 8px
        font-size .8em
        color cool-grey
        font-weight normal

    &.active
        background silver

    &:focus
        background silver

.account-switch-menu-content
    position fixed
    top 78px
    left 0
    bottom 10px
    width 440px
    overflow auto
    z-index: 60

.account-switch-menu
    margin 20px
    padding 0
    z-index 1
    overflow auto
    border solid 1px rgba(50, 54, 63, .12)
    border-radius 4px
    background white
    box-shadow 0 1px 3px 0 rgba(50, 54, 63, .19), 0 6px 18px 0 rgba(50, 54, 63, .19)

    h4
        margin 10px 0
        padding 0 19px
        font-size .8em
        color cool-grey

    ul
        list-style none
        margin 0
        padding 0


    button
        box-sizing border-box
        width 100%
        overflow hidden
        padding 8px 26px 8px 16px
        border 0
        border-left 3px solid transparent
        background 0
        color charcoal-grey
        text-overflow ellipsis
        white-space nowrap
        cursor pointer
        text-align left

        &:focus
            outline 0
            background silver

        &:hover
            background silver

    a
        display block
        text-transform uppercase
        padding 8px 19px
        font-size .8em
        font-weight bold

    .active, .active:hover
        border-left-color dodger-blue
        background  embedurl('../../assets/icons/icon-checked-blue.svg') 98% center no-repeat
        font-weight bold

    .active:hover
        background-color silver

    .account-count
        padding-left .5em
        color cool-grey
        font-size .8em

+medium-screen()
    .account-switch
        z-index 60
        position fixed
        top 68px
        right 20px
        height 47px
        margin 0
        padding 0
        width 48px
        border-width 0

    .account-switch-menu-content
        z-index 61
        position fixed
        top 58px
        bottom 10px
        left 50%
        margin-left -200px
        width 400px
        max-height inherit
        overflow auto

    .account-switch-menu
        top 0
        left 0
        right 0
        max-height inherit
        margin 0

    .account-switch-button-mobile
        $size = 3rem // same height as cozy-bar
        background embedurl('../../assets/icons/actions/filter.svg') center center no-repeat alpha(silver, 0.8)
        margin 0
        border 0
        width $size
        height $size
        cursor pointer
        outline 0

        &.active
            background-image embedurl('../../assets/icons/actions/filter-active.svg')

+small-screen()
    .account-switch
        top 0
        padding 0
        border 0
        margin 0
        width 0
        height 0

    .account-switch-button-mobile
        background-color transparent

    .account-switch-menu-content
        left 10px
        right 10px
        margin-left inherit
        width auto

